@@ -13,21 +13,20 @@
  */
 package ch.qos.logback.classic;
 
+import static org.junit.Assert.assertEquals;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.Before;
+import org.junit.Test;
 
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.read.ListAppender;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class LoggerMessageFormattingTest {
 
     LoggerContext lc;
     ListAppender<ILoggingEvent> listAppender;
 
-    @BeforeEach
+    @Before
     public void setUp() {
         lc = new LoggerContext();
         Logger logger = lc.getLogger(Logger.ROOT_LOGGER_NAME);
@@ -40,7 +39,7 @@ public class LoggerMessageFormattingTest {
     @Test
     public void testFormattingOneArg() {
         Logger logger = lc.getLogger(Logger.ROOT_LOGGER_NAME);
-        logger.debug("{}", Integer.valueOf(12));
+        logger.debug("{}", new Integer(12));
         ILoggingEvent event = (ILoggingEvent) listAppender.list.get(0);
         assertEquals("12", event.getFormattedMessage());
     }
@@ -48,7 +47,7 @@ public class LoggerMessageFormattingTest {
     @Test
     public void testFormattingTwoArg() {
         Logger logger = lc.getLogger(Logger.ROOT_LOGGER_NAME);
-        logger.debug("{}-{}", Integer.valueOf(12), Integer.valueOf(13));
+        logger.debug("{}-{}", new Integer(12), new Integer(13));
         ILoggingEvent event = (ILoggingEvent) listAppender.list.get(0);
         assertEquals("12-13", event.getFormattedMessage());
     }
@@ -56,7 +55,7 @@ public class LoggerMessageFormattingTest {
     @Test
     public void testNoFormatting() {
         Logger logger = lc.getLogger(Logger.ROOT_LOGGER_NAME);
-        logger.debug("test", Integer.valueOf(12), Integer.valueOf(13));
+        logger.debug("test", new Integer(12), new Integer(13));
         ILoggingEvent event = (ILoggingEvent) listAppender.list.get(0);
         assertEquals("test", event.getFormattedMessage());
     }
