@@ -20,7 +20,6 @@ import ch.qos.logback.classic.Level;
 import ch.qos.logback.classic.LoggerContext;
 import ch.qos.logback.classic.spi.ClassPackagingData;
 import ch.qos.logback.classic.spi.LoggerContextVO;
-import ch.qos.logback.classic.spi.PubLoggerContextVO;
 import ch.qos.logback.classic.spi.StackTraceElementProxy;
 import ch.qos.logback.classic.spi.ThrowableProxy;
 import ch.qos.logback.classic.spi.ThrowableProxyVO;
@@ -28,8 +27,7 @@ import ch.qos.logback.classic.spi.ThrowableProxyVO;
 /**
  * Models the corpus.
  * 
- * <p>
- * This contains the probability distributions of levels, logger names,
+ * <p>This contains the probability distributions of levels, logger names,
  * messages, message arguments.
  * 
  * @author Ceki G&uuml;lc&uuml;
@@ -163,15 +161,14 @@ public class CorpusModel {
 
     public long getRandomTimeStamp() {
         // subtract 1 so that 0 is allowed
-        lastTimeStamp += RandomUtil.gaussianAsPositiveInt(random, AVERAGE_MILLIS_INCREMENT,
-                STD_DEV_FOR_MILLIS_INCREMENT) - 1;
+        lastTimeStamp += RandomUtil.gaussianAsPositiveInt(random, AVERAGE_MILLIS_INCREMENT, STD_DEV_FOR_MILLIS_INCREMENT) - 1;
         return lastTimeStamp;
     }
 
-    PubLoggerContextVO getRandomlyNamedLoggerContextVO() {
+    LoggerContextVO getRandomlyNamedLoggerContextVO() {
         LoggerContext lc = new LoggerContext();
         lc.setName(getRandomJavaIdentifier());
-        return new PubLoggerContextVO(lc);
+        return new LoggerContextVO(lc);
     }
 
     String getRandomWord() {
@@ -191,8 +188,7 @@ public class CorpusModel {
 
     public StackTraceElement[] getRandomCallerData(int depth, String loggerName) {
         StackTraceElement[] cda = new StackTraceElement[depth];
-        StackTraceElement cd = new StackTraceElement(loggerName, getRandomJavaIdentifier(), extractLastPart(loggerName),
-                0);
+        StackTraceElement cd = new StackTraceElement(loggerName, getRandomJavaIdentifier(), extractLastPart(loggerName), 0);
         cda[0] = cd;
         for (int i = 1; i < depth; i++) {
             String ln = getRandomLoggerNameFromPool(loggerNamePool);
@@ -207,7 +203,7 @@ public class CorpusModel {
         }
         Object[] argumentArray = new Object[numOfArguments];
         for (int i = 0; i < numOfArguments; i++) {
-            argumentArray[i] = Long.valueOf(random.nextLong());
+            argumentArray[i] = new Long(random.nextLong());
         }
         return argumentArray;
     }
@@ -247,8 +243,7 @@ public class CorpusModel {
 
     private Throwable getRandomThrowable(Level level) {
         double rn = random.nextDouble();
-        if ((level == Level.WARN && rn < THROWABLE_PROPABILITY_FOR_WARNING)
-                || (level == Level.ERROR && rn < THROWABLE_PROPABILITY_FOR_ERRORS)) {
+        if ((level == Level.WARN && rn < THROWABLE_PROPABILITY_FOR_WARNING) || (level == Level.ERROR && rn < THROWABLE_PROPABILITY_FOR_ERRORS)) {
             return ExceptionBuilder.build(random, NESTING_PROBABILITY);
         } else {
             return null;
