@@ -13,21 +13,23 @@
  */
 package ch.qos.logback.core.joran;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+
 import java.util.HashMap;
 import java.util.List;
-import java.util.function.Supplier;
 
 import javax.xml.parsers.SAXParser;
 import javax.xml.parsers.SAXParserFactory;
 
 import ch.qos.logback.core.joran.spi.ElementSelector;
-import org.junit.jupiter.api.Test;
+import org.junit.Test;
 
 import ch.qos.logback.core.Context;
 import ch.qos.logback.core.ContextBase;
 import ch.qos.logback.core.joran.action.Action;
 import ch.qos.logback.core.joran.action.NOPAction;
-import ch.qos.logback.core.joran.action.TopElementAction;
 import ch.qos.logback.core.joran.action.ext.BadBeginAction;
 import ch.qos.logback.core.joran.action.ext.BadEndAction;
 import ch.qos.logback.core.joran.action.ext.HelloAction;
@@ -35,11 +37,7 @@ import ch.qos.logback.core.joran.action.ext.TouchAction;
 import ch.qos.logback.core.joran.spi.ActionException;
 import ch.qos.logback.core.status.Status;
 import ch.qos.logback.core.status.StatusManager;
-import ch.qos.logback.core.testUtil.CoreTestConstants;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import ch.qos.logback.core.util.CoreTestConstants;
 
 /**
  * Test the way Interpreter skips child elements in case of exceptions thrown by
@@ -49,7 +47,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
  */
 public class SkippingInInterpreterTest {
 
-    HashMap<ElementSelector, Supplier<Action>> rulesMap = new HashMap<>();
+    HashMap<ElementSelector, Action> rulesMap = new HashMap<ElementSelector, Action>();
     Context context = new ContextBase();
     StatusManager sm = context.getStatusManager();
 
@@ -60,18 +58,18 @@ public class SkippingInInterpreterTest {
 
     void doTest(String filename, Integer expectedInt, Class<?> exceptionClass) throws Exception {
 
-        rulesMap.put(new ElementSelector("test"), () -> new TopElementAction());
-        rulesMap.put(new ElementSelector("test/badBegin"), () -> new BadBeginAction());
-        rulesMap.put(new ElementSelector("test/badBegin/touch"), () -> new TouchAction());
-        rulesMap.put(new ElementSelector("test/badEnd"), () -> new BadEndAction());
-        rulesMap.put(new ElementSelector("test/badEnd/touch"), () -> new TouchAction());
-        rulesMap.put(new ElementSelector("test/hello"), () -> new HelloAction());
+        rulesMap.put(new ElementSelector("test"), new NOPAction());
+        rulesMap.put(new ElementSelector("test/badBegin"), new BadBeginAction());
+        rulesMap.put(new ElementSelector("test/badBegin/touch"), new TouchAction());
+        rulesMap.put(new ElementSelector("test/badEnd"), new BadEndAction());
+        rulesMap.put(new ElementSelector("test/badEnd/touch"), new TouchAction());
+        rulesMap.put(new ElementSelector("test/hello"), new HelloAction());
 
-        rulesMap.put(new ElementSelector("test/isolate"), () -> new NOPAction());
-        rulesMap.put(new ElementSelector("test/isolate/badEnd"), () -> new BadEndAction());
-        rulesMap.put(new ElementSelector("test/isolate/badEnd/touch"), () -> new TouchAction());
-        rulesMap.put(new ElementSelector("test/isolate/touch"), () -> new TouchAction());
-        rulesMap.put(new ElementSelector("test/hello"), () -> new HelloAction());
+        rulesMap.put(new ElementSelector("test/isolate"), new NOPAction());
+        rulesMap.put(new ElementSelector("test/isolate/badEnd"), new BadEndAction());
+        rulesMap.put(new ElementSelector("test/isolate/badEnd/touch"), new TouchAction());
+        rulesMap.put(new ElementSelector("test/isolate/touch"), new TouchAction());
+        rulesMap.put(new ElementSelector("test/hello"), new HelloAction());
 
         TrivialConfigurator tc = new TrivialConfigurator(rulesMap);
         tc.setContext(context);
@@ -106,11 +104,11 @@ public class SkippingInInterpreterTest {
 
     @Test
     public void testSkippingRuntimeExInBadEnd() throws Exception {
-        doTest("badEnd1.xml", Integer.valueOf(2), IllegalStateException.class);
+        doTest("badEnd1.xml", new Integer(2), IllegalStateException.class);
     }
 
     @Test
     public void testSkippingActionExInBadEnd() throws Exception {
-        doTest("badEnd2.xml", Integer.valueOf(2), ActionException.class);
+        doTest("badEnd2.xml", new Integer(2), ActionException.class);
     }
 }
